--- a/E1/index.html
+++ b/E1/index.html
@@ -13,7 +13,12 @@
             <div class="presentacion">
                 <h1>Holis</h1>
                 <p>Todo lo que usted desea ver lo encontrará en la consola,</p>
-                <p>y en este repositorio de GitHub</p>
+                <p>y en este 
+                    <a href="https://github.com/2piradrian/Entregas-Nucba/tree/main/E1">
+                        repositorio
+                    </a>
+                    de GitHub
+                </p>
             </div>
         </section>
     </main>
