--- a/E1/index.html
+++ b/E1/index.html
@@ -22,6 +22,6 @@
             </div>
         </section>
     </main>
-    <script src="/JavaScript/E1/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
